[gd_scene load_steps=2 format=3 uid="uid://rpfc36kn5j6y"]

[ext_resource type="Script" uid="uid://3m6l1wrrhjws" path="res://TitleScreen.gd" id="1_fnlyl"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fnlyl")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="NewGameButton" type="Button" parent="VBox"]
layout_mode = 2
text = "New Game"

[node name="LoadGameButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Load Game"

[node name="SavesList" type="ItemList" parent="VBox"]
layout_mode = 2
auto_width = true
auto_height = true

[node name="StatusLabel" type="Label" parent="VBox"]
layout_mode = 2
